1-argocd/post-deployments/2-ngf-shared-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway 
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    # Omitting the 'hostname' field creates an HTTP catch-all listener
    allowedRoutes:
      namespaces:
        from: All
  listeners:
  - name: https
    port: 443 
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
